src/objects/IRIS_Assessment_Data__c.object
<CustomObject>
    <description>Stores all the rating against a question.</description>
    <fields>
        <fullName>Actual_Score__c</fullName>
        <description>Used to store the actual score given by assessor.</description>
        <label>Actual Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Represents the associated assessment question</description>
        <label>Assessment Question</label>
        <referenceTo>IRIS_Assessment_Questions__c</referenceTo>
        <relationshipLabel>Assessments Data</relationshipLabel>
        <relationshipName>Assessment_Data</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <description>Represents the associated assessment</description>
        <label>Assessment</label>
        <referenceTo>IRIS_Submission_Assessment__c</referenceTo>
        <relationshipLabel>Assessments Data</relationshipLabel>
        <relationshipName>Assessment_data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Stores the comments given by the COE Assessor.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <description>The question number of the question</description>
        <label>Ref</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Represents the actual question (in text)</description>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rating_Colour__c</fullName>
        <formula>IF( 
	ISPICKVAL( Rating__c , &apos;1 - Red&apos;) ,
	IMAGE(&apos;/resource/IRIS_Rating_Assess/1.png&apos;, &apos;red&apos;, 38, 38) , 
	IF( 
		ISPICKVAL(Rating__c , &apos;2 - Orange&apos;) ,
		IMAGE(&apos;/resource/IRIS_Rating_Assess/2.png&apos;,&apos;Orange&apos;, 38, 38) , 
		IF( 
			ISPICKVAL( Rating__c , &apos;3 - Yellow&apos;) ,
			IMAGE(&apos;/resource/IRIS_Rating_Assess/3.png&apos;, &apos;Yellow&apos;, 38, 38) , 
			IF( 
				ISPICKVAL( Rating__c , &apos;4 - Light Green&apos;) ,
				IMAGE(&apos;/resource/IRIS_Rating_Assess/4.png&apos;, &apos;Light Green&apos;, 38, 38) , 
				IF( 
					ISPICKVAL( Rating__c , &apos;5 - Green&apos;) ,
					IMAGE(&apos;/resource/IRIS_Rating_Assess/5.png&apos;, &apos;Green&apos;, 38, 38) , 
					&apos;&apos;
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Stores the rating for the assessment question</description>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Light Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendations__c</fullName>
        <description>Stores the recommendations specific to the assessment question.</description>
        <label>Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Stores the sequence of the question.</description>
        <inlineHelpText>Stores the sequence of the question on an assessment.</inlineHelpText>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <description>Used to store the total score for a question.</description>
        <label>Total Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assessment Data</label>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Assessment Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>